<resources>
    <string name="app_name">BitLocker</string>
    <string name="welcome_text">Willkommen bei BitLocker !</string>
    <string name="create_masterpassword">Masterpasswort anlegen</string>
    <string name="fill_in_masterpassword_required">Masterpasswort eingeben*</string>
    <string name="confirm_masterpassword">Masterpasswort bestätigen*</string>
    <string name="register">Registrieren</string>
    <string name="login">login</string>
    <string name="masterpassword">Masterpasswort*</string>
    <string name="required">Pflichtfeld*</string>
    <string name="tresor">Tresor</string>
    <string name="pw_generator">PW-Generator</string>
    <string name="settings">Einstellungen</string>
    <string name="website_and_password_text">Website und Passwort eingeben</string>
    <string name="enter_website">Website eingeben*</string>
    <string name="create_password">Passwort eingeben*</string>
    <string name="confirm_password">Passwort bestätigen*</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="fill_in_masterpassword">Masterpasswort eingeben</string>
    <string name="nothing_to_show">Sie haben noch keine Passwörter angelegt! :)</string>
    <string name="website">Website:</string>
    <string name="required_field_is_empty">Eines Ihrer Pflichtfelder(*) ist leer.</string>
    <string name="passwords_unequal">Ihre eingegebenen Passwörter stimmen nicht überein.</string>
    <string name="password_too_short">Ihr Passwort ist zu kurz, bitte geben Sie ein längeres ein (min. 10 Zeichen).</string>
    <string name="website_already_exists">Sie haben bereits ein Passwort für diese Website.</string>
    <string name="password_created">Ihr Passwort wurde erfolgreich angelegt!</string>
    <string name="wrong_masterpassword">Das eingegebene Masterpasswort ist falsch!</string>
    <string name="password_too_long">Ihr Passwort darf nicht länger als 50 Zeichen sein.</string>
    <string name="website_too_long">Die Website darf nicht länger als 20 Zeichen sein.</string>
    <string name="pw_view_change_delete">Passwort ansehen, ändern, löschen</string>
    <string name="password_required">Passwort*</string>
    <string name="website_required">Website*</string>
    <string name="agree_with_changes">Ich bin mit den Änderungen einverstanden.</string>
    <string name="not_checked_warning">Sie haben die Checkbox nicht angekreuzt!</string>
    <string name="unapplied_changes_warning">Sie haben unbestätigte Änderungen vorgenommen.</string>
    <string name="password_and_website_changed">Die Website und das Passwort wurden erfolgreich geändert.</string>
    <string name="password_changed">Das Passwort wurde erfolgreich geändert.</string>
    <string name="website_changed">Die Website wurde erfolgreich geändert.</string>
    <string name="password_length_colon">Passwortlänge:</string>
    <string name="default_pwLength_seekbar_value">10 Zeichen (sehr schwach)</string>
    <string name="special_character_portion_colon">Sonderzeichenanteil:</string>
    <string name="default_specialCharPort_seekbar_value">10% Sonderzeichen (sehr schwach)</string>
    <string name="very_weak">sehr schwach</string>
    <string name="weak">schwach</string>
    <string name="expandable">ausbaufähig</string>
    <string name="strong">stark</string>
    <string name="very_strong">sehr stark</string>
    <string name="characters">Zeichen</string>
    <string name="special_character_portion">Sonderzeichenanteil</string>
    <string name="generate_pw">PW Generieren</string>
    <string name="password_copied">Passwort kopiert!</string>
    <string name="generated_password">Generiertes Passwort:</string>
    <string name="sp_characters_shorted">Sonderz.</string>
    <string name="characters_shorted">Zeichen</string>
    <string name="default_passwordCreation_seekbar_value">sehr schwach (10 Zeichen, 10% Sonderz.)</string>
    <string name="no_changes_made">Sie haben keine Änderungen vorgenommen.</string>
    <string name="you_havent_generated_a_pw">Sie haben noch kein Passwort generiert.</string>
    <string name="nothing_to_copy">Es gibt nichts zum kopieren.</string>
    <string name="logout">Ausloggen</string>
    <string name="delete_account">Konto löschen</string>
    <string name="safe_timeout_on">Tresor Timeout an</string>
    <string name="safe_timeout_off">Tresor Timeout aus</string>
    <string name="delete_account_confirmation_text">Ich möchte meinen Account löschen.</string>
    <string name="one_minute">1 Minute</string>
    <string name="five_minutes">5 Minuten</string>
    <string name="thirty_minutes">30 Minuten</string>
    <string name="time_exceeded">Sie werden aufgrund von Zeitüberschreitung im Tresor ausgeloggt.</string>

</resources>