<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.fragments.SafeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewSettingsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sarpanch"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/safeTimeoutLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/safeTimeoutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSettingsHeader">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/safeTimeoutSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/safeTimeoutSwitchText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/safeTimeoutSwitchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sarpanch"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/safeTimeoutSwitch"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/radioButtonSafeTimeoutGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/logoutButton"
            app:layout_constraintLeft_toLeftOf="@+id/logoutButton"
            app:layout_constraintTop_toBottomOf="@+id/safeTimeoutLayout">

            <RadioButton
                android:id="@+id/radioButton1MinTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:fontFamily="@font/sarpanch"
                android:text="@string/one_minute"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton5MinTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:fontFamily="@font/sarpanch"
                android:text="@string/five_minutes"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton30MinTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:fontFamily="@font/sarpanch"
                android:text="@string/thirty_minutes"
                android:textStyle="bold" />

        </RadioGroup>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/logout"
            android:textSize="15sp"
            app:icon="@drawable/ic_baseline_exit_to_app_24"
            app:layout_constraintBottom_toTopOf="@+id/checkboxDeleteAccount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/deleteAccountButton"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonSafeTimeoutGroup" />

        <CheckBox
            android:id="@+id/checkboxDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sarpanch"
            android:text="@string/delete_account_confirmation_text"
            android:textColor="@color/white"
            app:buttonTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/deleteAccountButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/delete_account"
            android:textSize="15sp"
            app:icon="@drawable/ic_baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkboxDeleteAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>