<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.RegistrationScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/willkommenstextRegistrierung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sarpanch"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/passwortEingabeAufforderungRegistrierung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/passwortEingabeAufforderungRegistrierung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sarpanch"
            android:text="@string/create_masterpassword"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/masterpasswortFeld1RegistrierungLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/willkommenstextRegistrierung" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/masterpasswortFeld1RegistrierungLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@color/white"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/masterpasswortFeld2RegistrierungLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwortEingabeAufforderungRegistrierung"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/masterpasswortFeld1RegistrierungEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/fill_in_masterpassword_required"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/masterpasswortFeld2RegistrierungLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@color/white"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/registrierenButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/masterpasswortFeld1RegistrierungLayout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/masterpasswortFeld2RegistrierungEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/confirm_masterpassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registrierenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/masterpasswortFeld2RegistrierungLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>