<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.PasswordViewScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/passwortViewChangeCreateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sarpanch"
            android:text="@string/pw_view_change_delete"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/viewScreenWebsiteLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/viewScreenWebsiteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/white"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/viewScreenPasswordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwortViewChangeCreateText"
            app:startIconDrawable="@drawable/ic_baseline_place_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/viewScreenWebsiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/website_required" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/viewScreenPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@color/white"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewScreenWebsiteLayout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/viewScreenPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/password_required"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxApplyChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/agree_with_changes"
            android:textColor="@color/white"
            app:buttonTint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/deleteEntryButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewScreenPasswordLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteEntryButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goBackToMainMenuButton"
            app:layout_constraintTop_toBottomOf="@id/checkBoxApplyChanges"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/modifyEntryButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_baseline_mode_24"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toStartOf="@+id/goBackToMainMenuButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxApplyChanges"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

        <Button
            android:id="@+id/goBackToMainMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxApplyChanges" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>