<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.PasswordCreationScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/passwortCreationEingabeaufforderungText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sarpanch"
            android:text="@string/website_and_password_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/websiteTextInputFieldCreationLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/websiteTextInputFieldCreationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/white"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwortCreationEingabeaufforderungText"
            app:startIconDrawable="@drawable/ic_baseline_place_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/websiteFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/enter_website" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputFieldCreationLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@color/white"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/websiteTextInputFieldCreationLayout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordFieldEditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/create_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputFieldCreationLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@color/white"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInputFieldCreationLayout1"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordFieldEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <SeekBar
            android:id="@+id/seekBarPasswortStrength"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:max="40"
            app:layout_constraintBottom_toTopOf="@+id/textViewSeekBarPasswordStrength"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputFieldCreationLayout2" />

        <TextView
            android:id="@+id/textViewSeekBarPasswordStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sarpanch"
            android:text="@string/default_passwordCreation_seekbar_value"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/saveButtonPasswordCreation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarPasswortStrength" />

        <Button
            android:id="@+id/saveButtonPasswordCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSeekBarPasswordStrength" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButtonPasswordCreation"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/red"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_baseline_close_24"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saveButtonPasswordCreation"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/generatePasswordButtonPasswordCreation"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_baseline_shuffle_24"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButtonPasswordCreation"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>